fix: fancytree spacing issues

--- a/core_main_registry_app/static/core_main_registry_app/user/css/fancytree/fancytree.custom.css
+++ b/core_main_registry_app/static/core_main_registry_app/user/css/fancytree/fancytree.custom.css
@@ -10,10 +10,6 @@ span.fancytree-node {
     align-items: center;
 }
 
-span.fancytree-expander, span.fancytree-checkbox {
-    width: 5%;
-}
-
 span.fancytree-title{
     width: 85%;
     white-space: normal;
